# charuco-camera-calibration

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
src/charuco_calibration/: __init__.py  aruco_compat.py  calibrate_camera.py  capture_images.py  generate_board.py
