[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charuco-camera-calibration"
version = "0.1.0"
description = "Small ChArUco camera calibration toolkit for board generation, image capture, and OpenCV calibration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "HU Yuxuan", email = "neuhyx26@gmail.com" }
]
dependencies = [
  "numpy>=1.23",
  "opencv-contrib-python>=4.5,<5",
  "Pillow>=9",
]

[project.scripts]
charuco-generate-board = "charuco_calibration.generate_board:main"
charuco-capture-images = "charuco_calibration.capture_images:main"
charuco-calibrate-camera = "charuco_calibration.calibrate_camera:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
